--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       background-color: #222;
       color: #ffffff;
     }
-      input[type="number"] {
+    input[type="number"] {
       width: calc(100% - 20px);
       padding: 10px;
       margin-bottom: 10px;
@@ -44,7 +44,7 @@
       border-radius: 4px;
       background-color: #222;
       color: #ffffff;
-}
+    }
     select:hover {
       background-color: #303030;
       color: #ffffff;
@@ -101,6 +101,34 @@
       margin-left: 8px;
       margin-bottom: 8px;
     }
+    .creditos {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .bolttexturas {
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
+    .creditos-btn {
+      padding: 12px 20px;
+      background-color: #852121;
+      color: white;
+      border: none;
+      border-radius: 17px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background-color 0.3s;
+      text-align: center;
+      display: inline-block;
+    }
+    .creditos-btn:hover {
+      background-color: #531212;
+    }
+    .by {
+      color: #852121;
+    }
   </style>
 </head>
 <body>
@@ -134,6 +162,14 @@
 
 <div class="resultado" id="resultado"></div>
 <div class="destaque" id="xpTotal"></div>
+
+<!-- Créditos -->
+<div class="creditos">
+  <p class="doomeris"><span class="by">By</span> Doomeris</p>
+  <a href="https://www.youtube.com/@Doomeris" target="_blank">
+    <button class="creditos-btn">Youtube</button>
+  </a>
+</div>
 
 <script>
   let estrelaSelecionada = 1;
