--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       background-color: #6e28a7;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s;
     }
@@ -111,12 +111,15 @@
       font-size: 18px;
       margin-bottom: 15px;
     }
+    .bolt-text {
+      color: #e9e9e9;
+    }
     .creditos-btn {
       padding: 12px 20px;
-      background-color: #852121;
+      background-color: #592396;
       color: white;
       border: none;
-      border-radius: 17px;
+      border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
       transition: background-color 0.3s;
@@ -124,10 +127,24 @@
       display: inline-block;
     }
     .creditos-btn:hover {
-      background-color: #531212;
+      background-color: #3d1464;
     }
     .by {
-      color: #852121;
+      color: #592396;
+    }
+    .salvar-btn {
+      padding: 12px;
+      width: 100%;
+      background-color: #525252;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin-top: 20px;
+    }
+    .salvar-btn:hover {
+      background-color: #272727;
     }
   </style>
 </head>
@@ -163,11 +180,13 @@
 <div class="resultado" id="resultado"></div>
 <div class="destaque" id="xpTotal"></div>
 
+<!-- Botão para salvar a captura de tela -->
+<button id="btnSalvar" class="salvar-btn">Donwload</button>
+
 <!-- Créditos -->
 <div class="creditos">
-  <p class="doomeris"><span class="by">By</span> Doomeris</p>
+  <p class="doomeris"><span class="by">By</span> <span class="bolt-text">Doomeris - Bolttexturas</span></p>
   <a href="https://www.youtube.com/@Doomeris" target="_blank">
-    <button class="creditos-btn">Youtube</button>
   </a>
 </div>
 
@@ -294,6 +313,22 @@
       `TOTAL: ${xpNecessario} <span class='estrela-icone'>&#9733;</span>`;
   }
   atualizarCategoria();
+</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script>
+  document.getElementById("btnSalvar").addEventListener("click", function () {
+    const tipoCategoria = document.getElementById("tipoCategoria").value;
+    const xpAtual = document.getElementById("xpAtual").value || "0";
+    const nomeArquivo = `XP ${xpAtual} ${tipoCategoria}.png`;
+    
+    html2canvas(document.body).then(canvas => {
+      const link = document.createElement("a");
+      link.href = canvas.toDataURL("image/png");
+      link.download = nomeArquivo;
+      link.click();
+    });
+  });
 </script>
 
 </body>
